core: allowances: refactor RJSStandaloneTrainScheduleParser